fix(app): slide cards behind the screen

--- a/packages/app/src/app/srs/card/card.component.scss
+++ b/packages/app/src/app/srs/card/card.component.scss
@@ -1,7 +1,7 @@
 :host {
   display: block;
   height: 100%;
-  overflow: hidden;
+  overflow: visible;
   position: relative;
 }
 
